abp_backend_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: abp-frontend
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: abp-frontend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: abp-frontend
    spec:
      containers:
        - image: asia.gcr.io/gamix-h5/abp-frontend:v1
          imagePullPolicy: Always
          name: abp-frontend
          ports:
            - containerPort: 4200
              name: http
              protocol: TCP
          resources:
            limits:
              cpu: 100m
              memory: 100Mi
            requests:
              cpu: 80m
              memory: 80Mi
