abp_backend_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: abp-frontend
  namespace: default
spec:
  ports:
    - name: http
      port: 4200
      protocol: TCP
      targetPort: 4200
  selector:
    app: abp-frontend
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  type: ClusterIP
